# passdrop

./: .gitignore  BUILDING.md  FAQ.md  Global.h  LICENSE.txt  PassDrop-Info.plist  PassDrop_Prefix.pch  README.md  main.m  template.kdb
Classes/: AboutViewController.h  AboutViewController.m  AboutViewController.xib  AppPrefs.h  AppPrefs.m  ChooseIconView.xib  Database.h  DatabaseManager.h  DatabaseManager.m  DropBoxBrowserController.h  DropBoxBrowserController.m  DropBoxBrowserController.xib  DropBoxDatabase.h  DropBoxDatabase.m  EditDatabaseViewController.h  EditDatabaseViewController.m  EditDatabaseViewController.xib  EditEntryViewController.h  EditEntryViewController.m  EditGroupViewController.h  EditGroupViewController.m  EditViewController.xib  EnterPasswordController.xib  GeneratePasswordViewController.h  GeneratePasswordViewController.m  HideScreenView.xib  HideViewController.h  HideViewController.m  IconPicker.h  IconPicker.m  KdbEntry.h  KdbEntry.m  KdbEntryViewController.h  KdbEntryViewController.m  KdbEntryViewController.xib  KdbGroup.h  KdbGroup.m  KdbGroupViewController.h  KdbGroupViewController.m  KdbGroupViewController.xib  (+29 more)
Classes/PullToReload.bundle/: pop.caf  pull1.caf  pull2.caf
PassDrop.xcodeproj/: project.pbxproj
PassDrop.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PassDrop.xcodeproj/project.xcworkspace/xcshareddata/: PassDrop.xccheckout
iPad/: MainWindow-iPad.xib
icon/: passdrop_icon.psd
include/openssl/: opensslconf.h
libkpass-3/: AUTHORS  ChangeLog  DbFormat.txt  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.ac
libkpass-3/src/: config.h.in  kpass.c  kpass.h  rlkpass.c  test1.c  test2.c
libkpass-3/test/: block0.kdb  block1.kdb  block10.kdb  block11.kdb  block12.kdb  block13.kdb  block14.kdb  block15.kdb  block2.kdb  block3.kdb  block4.kdb  block5.kdb  block6.kdb  block7.kdb  block8.kdb  block9.kdb
(+2 files in other folders)
